results/SpecGenBench/conversational/log-MoveZeroes-2023_07_11_02_04_55.txt
class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \result);
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \result);
                                                                                  ^
1 error

java
class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:1: error: class, interface, enum, or record expected
java
^
1 error

public class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
                                                                                       ^
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression is not allowed in an old environment
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
                                                                                      ^
2 errors

public class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \result);
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \result);
                                                                                  ^
1 error

public class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
                                                                                       ^
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:3: error: A \result expression is not allowed in an old environment
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= \old(\result));
                                                                                      ^
2 errors

public class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= 0);
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}
/home/max/Documents/JMLGPT/tmp/MoveZeroes.java:8: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method moveZeroes
        //@ maintaining (\forall int i; right <= i && i < n; nums[i] == 0);
            ^
1 verification failure

public class MoveZeroes {
    //@ requires nums != null;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] == 0 ==> i >= 0);
    public void moveZeroes(int[] nums) {
        int n = nums.length, left = 0, right = 0;
        //@ maintaining 0 <= left && left <= right && right <= n;
        //@ maintaining (\forall int i; 0 <= i && i < left; nums[i] != 0);
        //@ maintaining (\forall int i; left <= i && i < right; nums[i] == 0);
        //@ decreases n - right;
        while (right < n) {
            if (nums[right] != 0) {
                swap(nums, left, right);
                left++;
            }
            right++;
        }
    }

    //@ requires nums != null && 0 <= left && left < nums.length && 0 <= right && right < nums.length;
    //@ ensures nums[left] == \old(nums[right]) && nums[right] == \old(nums[left]);
    public void swap(int[] nums, int left, int right) {
        int temp = nums[left];
        nums[left] = nums[right];
        nums[right] = temp;
    }
}

